--- a/LLama3.1.groq.ipynb
+++ b/LLama3.1.groq.ipynb
@@ -51,7 +51,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "os.environ[\"GROQ_API_KEY\"]=\"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\""
+    "os.environ[\"GROQ_API_KEY\"]=\"#\""
    ]
   },
   {
